# job_site_parsing

./: README.md  main.py  pyproject.toml
API/: login.txt
src/: classnames.py  files.py  function.py  hh_vacancies.py  superjob_vacancies.py  user.py
